Prevent burger icon from overlapping text

--- a/src/src/assets/main.css
+++ b/src/src/assets/main.css
@@ -21,7 +21,7 @@ h1, h2, h3{
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding: 180px 2em 4em;
+  padding: 180px 4em 4em;
 }
 
 @media (hover: hover) {
